--- a/.travis.yml
+++ b/.travis.yml
@@ -16,3 +16,7 @@ addons:
 before_install:
   - sudo apt-get -qq update
   - sudo apt-get install -y libcairo2-dev libjpeg8-dev libpango1.0-dev libgif-dev build-essential g++
+
+notifications:
+  email:
+    on_success: never
