--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
     "d3-scale-chromatic": "^1.3.3",
     "d3-selection": "^1.3.2",
     "enzyme-adapter-react-16": "^1.6.0",
+    "prop-types": "^15.6.2",
     "react-faux-dom": "^4.2.0"
   },
   "peerDependencies": {
-    "react": "^0.14.0 || ^15.0.0-0 || ^16.0.0-0"
+    "react": "^0.14.0 || ^15.0.0-0 || ^16.0.0-0",
+    "react-dom": "^0.14.0 || ^15.0.0-0 || ^16.0.0-0"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.2",
@@ -62,7 +64,6 @@
     "lint-staged": "^7.3.0",
     "prettier": "^1.14.3",
     "prettier-package-json": "^2.0.1",
-    "prop-types": "^15.6.2",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "react-test-renderer": "^16.6.0"
